
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int va_list ;
struct nsprintf {char* buffer; size_t length; size_t max; } ;


 int addbyter ;
 int dprintf_formatf (struct nsprintf*,int ,char const*,int ) ;

int curl_mvsnprintf(char *buffer, size_t maxlength, const char *format,
                    va_list ap_save)
{
  int retcode;
  struct nsprintf info;

  info.buffer = buffer;
  info.length = 0;
  info.max = maxlength;

  retcode = dprintf_formatf(&info, addbyter, format, ap_save);
  if((retcode != -1) && info.max) {

    if(info.max == info.length)

      info.buffer[-1] = 0;
    else
      info.buffer[0] = 0;
  }
  return retcode;
}
